# Part3

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  exe
src/: Course.cpp  Course.h  CourseList.cpp  CourseList.h  CourseListBigThree.cpp  CourseListInsertInOrder.cpp  Interface.cpp  Main.cpp  TestCopyAssignmentOp.cpp  TestCopyConstructor.cpp  TestFunctions.cpp
